[dependencies.serde]
features = ["derive"]
optional = true
path = "../serde-1.0.99"
version = "1.0"

[package]
authors = ["Hyunsik Choi <hyunsik.choi@gmail.com>"]
description = "an utility for human-readable bytes representations"
documentation = "https://docs.rs/bytesize/"
homepage = "https://github.com/hyunsik/bytesize/"
keywords = ["byte", "byte-size", "utility", "human-readable", "format"]
license = "Apache-2.0"
name = "bytesize"
readme = "README.md"
repository = "https://github.com/hyunsik/bytesize/"
version = "1.0.0"
