[dependencies]

[package]
authors = ["Denis Kurilenko <webdesus@gmail.com>"]
description = "Expanding opportunities standard library std::fs and std::io. Recursively copy folders with recept information about process and much more."
documentation = "https://docs.rs/fs_extra"
homepage = "https://github.com/webdesus/fs_extra"
include = ["**/*.rs", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["filesystem", "recursion", "copy", "dir", "file"]
license = "MIT"
name = "fs_extra"
repository = "https://github.com/webdesus/fs_extra"
version = "1.1.0"
