[badges.appveyor]
repository = "serde-rs/serde"

[badges.travis-ci]
repository = "serde-rs/serde"
[dependencies.serde_derive]
optional = true
path = "../serde_derive-1.0.99"
version = "1.0"
[dev-dependencies.serde_derive]
version = "1.0"

[features]
alloc = []
default = ["std"]
derive = ["serde_derive"]
rc = []
std = []
unstable = []

[package]
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
build = "build.rs"
categories = ["encoding"]
description = "A generic serialization/deserialization framework"
documentation = "https://docs.serde.rs/serde/"
homepage = "https://serde.rs"
include = ["Cargo.toml", "build.rs", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
keywords = ["serde", "serialization", "no_std"]
license = "MIT OR Apache-2.0"
name = "serde"
readme = "crates-io.md"
repository = "https://github.com/serde-rs/serde"
version = "1.0.99"
[package.metadata.playground]
features = ["derive", "rc"]
