[badges.appveyor]
repository = "serde-rs/serde"

[badges.travis-ci]
repository = "serde-rs/serde"
[dependencies.proc-macro2]
path = "../proc-macro2-1.0.1"
version = "1.0"

[dependencies.quote]
path = "../quote-1.0.2"
version = "1.0"

[dependencies.syn]
features = ["visit"]
path = "../syn-1.0.3"
version = "1.0"
[dev-dependencies.serde]
version = "1.0"

[features]
default = []
deserialize_in_place = []

[lib]
name = "serde_derive"
proc-macro = true

[package]
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
description = "Macros 1.1 implementation of #[derive(Serialize, Deserialize)]"
documentation = "https://serde.rs/derive.html"
homepage = "https://serde.rs"
include = ["Cargo.toml", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
keywords = ["serde", "serialization", "no_std"]
license = "MIT OR Apache-2.0"
name = "serde_derive"
readme = "crates-io.md"
repository = "https://github.com/serde-rs/serde"
version = "1.0.99"
