[[bench]]
edition = "2018"
harness = false
name = "rust"
required-features = ["full", "parsing"]

[[bench]]
edition = "2018"
name = "file"
required-features = ["full", "parsing"]
[badges.travis-ci]
repository = "dtolnay/syn"
[dependencies.proc-macro2]
default-features = false
path = "../proc-macro2-1.0.1"
version = "1.0"

[dependencies.quote]
default-features = false
optional = true
path = "../quote-1.0.2"
version = "1.0"

[dependencies.unicode-xid]
path = "../unicode-xid-0.2.0"
version = "0.2"
[dev-dependencies.insta]
version = "0.9"

[dev-dependencies.rayon]
version = "1.0"

[dev-dependencies.ref-cast]
version = "0.2"

[dev-dependencies.regex]
version = "1.0"

[dev-dependencies.termcolor]
version = "1.0"

[dev-dependencies.walkdir]
version = "2.1"

[features]
clone-impls = []
default = ["derive", "parsing", "printing", "clone-impls", "proc-macro"]
derive = []
extra-traits = []
fold = []
full = []
parsing = []
printing = ["quote"]
proc-macro = ["proc-macro2/proc-macro", "quote/proc-macro"]
visit = []
visit-mut = []

[lib]
name = "syn"

[package]
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::procedural-macro-helpers"]
description = "Parser for Rust source code"
documentation = "https://docs.rs/syn"
edition = "2018"
include = ["/benches/**", "/build.rs", "/Cargo.toml", "/LICENSE-APACHE", "/LICENSE-MIT", "/README.md", "/src/**", "/tests/**"]
license = "MIT OR Apache-2.0"
name = "syn"
readme = "README.md"
repository = "https://github.com/dtolnay/syn"
version = "1.0.3"
[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true
